Fixing layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -231,7 +231,7 @@ le breakpoint pour être plus responsive*/
     font-weight: 600;
     margin: 1rem 0;
     outline: 0;
-    padding: 2rem 3rem;
+    padding: 2rem 4vw; /* 4vw is 4% of the viewport the horizontal padding is determined by the width of the screen */
     text-align: center;
     text-transform: uppercase;
     white-space: nowrap;
@@ -324,8 +324,9 @@ le breakpoint pour être plus responsive*/
 /* We use nesting here to target the input inside the div */
 .input-group .input {
     border: 0;
-    flex-grow: 1;
+    flex-grow: 1; /* The input will grow to take all the available space */
     padding: 1.5rem 2rem;
+    width: 0; /* The width will be determined by the flex-grow property */
 }
 
 .input-group .btn {
@@ -787,8 +788,9 @@ le breakpoint pour être plus responsive*/
 }
 
 .block-domain__prices {
+    color: var(--color-headings);
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 6rem);/* If we don't set this our item will be so close */
     font-size: 2rem;
     font-weight: 600;
